Fixed an issue where character text was not aligned with title

--- a/src/app/charactermanager/components/sidenav/sidenav.component.scss
+++ b/src/app/charactermanager/components/sidenav/sidenav.component.scss
@@ -14,7 +14,7 @@
 }
 
 .app-sidenav {
-  padding: 20px;
+  padding: 0px;
 }
 
 .wrapper {
